Updated build file.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'com.android.application'
-
+/*
+- Our app level build.gradle file.
+- We specify compilesdk,minimum sdk,target sdk and dependencies.
+- Note that the minimum sdk for this project isn't that strict,it is much lower than that specified below.
+- We also add dependencies using 'compile' statement.
+- Our activity shall derive from the appCompatActivity to make it target earlier android versions.
+- We also specify design support library as well as CardView.
+- Finally we add a third party library called simpleratingbar. We use it because it provides us the capability to customize most of the
+ratingbar widget features such as star size,star color,border color,number of stars,step size etc. So add it and sync the project.
+ */
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
